website initial version

--- a/index.html
+++ b/index.html
@@ -3,26 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400..900&display=swap"
+      rel="stylesheet"
+    />
     <title>tomchannell.com</title>
   </head>
   <body>
     <div class="text-container">
       <div class="name-container">
-        <h2>Tom Channell</h2>
+        <div>Tom Channell</div>
       </div>
-      <div class="links-container">
-        <ul class="links-list">
-          <li class="link">Github</li>
-          <li class="link">Linkedin</li>
-          <li class="link">Instagram</li>
-        </ul>
-      </div>
-      <div class="job-descritption-container">
-        <h3>Software Developer</h3>
-      </div>
-      <div class="location-container">
-        <h3>Hobart, Tasmania</h3>
-      </div>
+      <ul class="links-list">
+        <li class="link">
+          <a href="https://github.com/channelltom" target="_blank">Github</a>
+        </li>
+        <li class="link">
+          <a
+            href="https://www.linkedin.com/in/thomas-channell-6a91b8114/"
+            target="_blank"
+            >Linkedin</a
+          >
+        </li>
+        <li class="link">
+          <a href="https://www.instagram.com/_channelltom/" target="_blank"
+            >Instagram</a
+          >
+        </li>
+      </ul>
     </div>
     <div class="gradient-bg">
       <svg xmlns="http://www.w3.org/2000/svg">
@@ -53,6 +63,10 @@
         <div class="interactive"></div>
       </div>
     </div>
+    <div class="job-location-container">
+      <div>Software Developer | Hobart, Tasmania</div>
+    </div>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
